--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-react": "^7.10.1",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.6.0",
+    "file-loader": "^6.2.0",
     "node-sass": "^8.0.0",
     "sass": "^1.62.0",
     "sass-loader": "^10.4.1",
